<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="brave_about_fork">Due to restrictive project policy, the NewPipeTeam refuses to add platforms that they find offensive. This fork (BraveNewPipe) will not be as restrictive. As long as the platforms work in the spirit of free speech, they could be integrated. Nevertheless, platforms that promote pornography or other degrading things will <b>NOT</b> be included here. This fork will focus only on integrating other platforms. Unrelated patches will be rejected for now. Feel free to suggest which alternative platforms should be included. Any contribution (development/testing/bug report) is greatly appreciated. Currently additional platforms compared to NewPipe:</string>
    <string name="brave_about_title">About this fork</string>
    <string name="brave_github_url" translatable="false">https://github.com/bravenewpipe</string>
    <string name="brave_supported_platforms" translatable="false">\n\u2022 BitChute\n\u2022 Rumble</string>

    <!-- begin - strings for search filter feature (BraveNewPipe Services only) -->
    <string name="search_filters_short">Short</string>
    <string name="search_filters_long">Long</string>
    <string name="search_filters_rumbles">Rumbles</string>
    <string name="search_filters_most_recent">Most recent</string>
    <string name="search_filters_short_0_5_min">Short (0-5m)</string>
    <string name="search_filters_medium_5_20_min">Medium (5-20m)</string>
    <string name="search_filters_long_20_min_plus"> Long (20m+)</string>
    <string name="search_filters_feature_45_min_plus">Feature (45m+)</string>
    <string name="search_filters_newest_first">Newest First</string>
    <string name="search_filters_oldest_first">Oldest First</string>
    <!-- end - strings for search filter feature (BraveNewPipe Services only) -->

    <!-- begin - strings for search filter feature (NewPipe Services only) -->
    <string name="search_filters_10_30_min">10–30 min</string>
    <string name="search_filters_2_10_min">2–10 min</string>
    <string name="search_filters_360">360°</string>
    <string name="search_filters_3d">3D</string>
    <string name="search_filters_4_20_min">4–20 min</string>
    <string name="search_filters_4k">4K</string>
    <string name="search_filters_added">Added</string>
    <string name="search_filters_artists_and_labels">artists &amp; labels</string>
    <string name="search_filters_any_time">Any time</string>
    <string name="search_filters_ascending">Ascending</string>
    <string name="search_filters_ccommons">Creative Commons</string>
    <string name="search_filters_creation_date">Creation date</string>
    <string name="search_filters_date">Date</string>
    <string name="search_filters_duration">Duration</string>
    <string name="search_filters_features">Features</string>
    <string name="search_filters_greater_30_min">&gt; 30 min</string>
    <string name="search_filters_hd">HD</string>
    <string name="search_filters_hdr">HDR</string>
    <string name="search_filters_kind">Kind</string>
    <string name="search_filters_last_30_days">Last 30 days</string>
    <string name="search_filters_last_7_days">Last 7 days</string>
    <string name="search_filters_last_hour">Last hour</string>
    <string name="search_filters_last_year">last year</string>
    <string name="search_filters_length">Length</string>
    <string name="search_filters_less_2_min">&lt; 2 min</string>
    <string name="search_filters_license">License</string>
    <string name="search_filters_location">Location</string>
    <string name="search_filters_long_greater_10_min">Long (&gt; 10 min)</string>
    <string name="search_filters_medium_4_10_min">Medium (4–10 min)</string>
    <string name="search_filters_no">No</string>
    <string name="search_filters_over_20_min">Over 20 min</string>
    <string name="search_filters_past_day">Past day</string>
    <string name="search_filters_past_hour">Past hour</string>
    <string name="search_filters_past_month">Past month</string>
    <string name="search_filters_past_week">Past week</string>
    <string name="search_filters_past_year">Past year</string>
    <string name="search_filters_publish_date">Publish date</string>
    <string name="search_filters_published">Published</string>
    <string name="search_filters_purchased">Purchased</string>
    <string name="search_filters_rating">Rating</string>
    <string name="search_filters_relevance">Relevance</string>
    <string name="search_filters_sensitive">Sensitive</string>
    <string name="search_filters_sepiasearch">SepiaSearch</string>
    <string name="search_filters_short_less_4_min">Short (&lt; 4 min)</string>
    <string name="search_filters_sort_by">Sort by</string>
    <string name="search_filters_sort_order">Sort order</string>
    <string name="search_filters_subtitles">Subtitles</string>
    <string name="search_filters_to_modify_commercially">To modify commercially</string>
    <string name="search_filters_today">Today</string>
    <string name="search_filters_under_4_min">Under 4 min</string>
    <string name="search_filters_upload_date">Upload Date</string>
    <string name="search_filters_views">Views</string>
    <string name="search_filters_vod_videos">VOD videos</string>
    <string name="search_filters_vr180">VR180</string>
    <string name="search_filters_this_month">This month</string>
    <string name="search_filters_this_week">This week</string>
    <string name="search_filters_this_year">This year</string>
    <string name="search_filters_yes">Yes</string>
    <string name="search_filters_youtube_music">YouTube Music</string>
    <!-- end - strings for search filter feature (NewPipe Services only) -->

    <!-- begin - more strings for search filter feature -->
    <string name="filter">Filter</string>
    <string name="filter_search_sort_filters">Sort filters</string>
    <string name="filter_search_content_filters">Content filters</string>
    <string name="search_filter_ui">Select Search Filter UI</string>
    <string name="search_filter_ui_dialog">Simple Dialog (default)</string>
    <string name="search_filter_ui_style">Action Menu styled Dialog</string>
    <string name="search_filter_ui_legacy">Action Menu (legacy)</string>
    <string name="search_filter_ui_chip_dialog">Chip Dialog</string>
    <!-- end - more strings for search filter feature -->

    <!-- begin - BraveNewPipe settings page -->
    <string name="brave_settings">BraveNewPipe Settings</string>

    <!-- begin - settings for replacing host domain names -->
    <string name="brave_settings_host_replace_key">brave_settings_host_replace_key</string>
    <string name="brave_settings_host_replace_dialog_title">Select the hosts you want to replace</string>
    <string name="brave_settings_host_replace_title">Replace restricted hosts</string>
    <string name="brave_settings_host_replace_summary">In some countries some hosts are restricted but can be replaced by others.</string>
    <!-- end - settings for replacing host domain names -->

    <!-- end - BraveNewPipe settings page -->
</resources>
